--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -89,4 +89,4 @@ jobs:
           cd build
           cmake ..
           make
-          ./src/calculator car 5
+          ./src/calculator car 5 5
