--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -75,4 +75,20 @@ jobs:
           cmake ..
           make
           ./src/calculator sub 10 5
-
+          
+  Deploy:
+      runs-on: ubuntu-latest
+      needs: [Test_Add, Test_Div, Test_Mul, Test_Sub]
+      steps:
+        - name: Checkout code
+          uses: actions/checkout@v2
+    
+        - name: Deploy to server
+          env:
+            DEPLOY_SERVER: ${{ secrets.DEPLOY_SERVER }}
+            DEPLOY_USER: ${{ secrets.DEPLOY_USER }}
+            DEPLOY_PATH: ${{ secrets.DEPLOY_PATH }}
+          run: |
+            echo "Starting deployment"
+            scp -r build/* $DEPLOY_USER@$DEPLOY_SERVER:$DEPLOY_PATH || echo "Deploy failed"
+            echo "Deployment complete"
